// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpellForm /> fields <CancelButton /> should match the snapshot 1`] = `
<CancelButton
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 action",
          "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
          "duration": "1 hour",
          "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
          "level": 0,
          "materialComponent": "a pinch of flumph dust",
          "name": "Flumph Lantern",
          "range": "30 feet",
          "ritual": false,
          "school": "evocation",
          "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
          "slug": "flumph-lantern",
          "somaticComponent": false,
          "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
          "sourceType": "Publication",
          "verbalComponent": true,
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
  isUpdate={false}
>
  <FormGroup
    className=""
    colWidth={null}
  >
    <div
      className="form-group col"
    >
      <SpellFormCancelButton
        form={
          Object {
            "data": Object {
              "spell": Object {
                "castingTime": "1 action",
                "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
                "duration": "1 hour",
                "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
                "level": 0,
                "materialComponent": "a pinch of flumph dust",
                "name": "Flumph Lantern",
                "range": "30 feet",
                "ritual": false,
                "school": "evocation",
                "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
                "slug": "flumph-lantern",
                "somaticComponent": false,
                "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
                "sourceType": "Publication",
                "verbalComponent": true,
              },
            },
            "onChangeAction": [MockFunction],
            "onSubmitAction": [MockFunction],
            "path": Array [
              "spell",
            ],
          }
        }
        isUpdate={false}
      >
        <LinkButton
          block={true}
          buttonSize={null}
          buttonStyle="secondary"
          className={null}
          link={false}
          outline={true}
          url="/spells"
        >
          <Link
            className="btn btn-outline-secondary btn-block"
            to="/spells"
          >
            <a
              className="btn btn-outline-secondary btn-block"
              href="/spells"
              onClick={[Function]}
            >
              Cancel
            </a>
          </Link>
        </LinkButton>
      </SpellFormCancelButton>
    </div>
  </FormGroup>
</CancelButton>
`;

exports[`<SpellForm /> fields <CastingTimeField /> should match the snapshot 1`] = `
<CastingTimeField
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 action",
          "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
          "duration": "1 hour",
          "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
          "level": 0,
          "materialComponent": "a pinch of flumph dust",
          "name": "Flumph Lantern",
          "range": "30 feet",
          "ritual": false,
          "school": "evocation",
          "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
          "slug": "flumph-lantern",
          "somaticComponent": false,
          "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
          "sourceType": "Publication",
          "verbalComponent": true,
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
>
  <FormField
    className="spell-casting-time-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "spell",
      ]
    }
    prop="castingTime"
  >
    <FormGroup
      className="form-field spell-casting-time-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field spell-casting-time-field"
      >
        <label
          htmlFor="spell-casting-time-input"
        >
          Casting Time
        </label>
        <CastingTimeInput
          form={
            Object {
              "data": Object {
                "spell": Object {
                  "castingTime": "1 action",
                  "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
                  "duration": "1 hour",
                  "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
                  "level": 0,
                  "materialComponent": "a pinch of flumph dust",
                  "name": "Flumph Lantern",
                  "range": "30 feet",
                  "ritual": false,
                  "school": "evocation",
                  "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
                  "slug": "flumph-lantern",
                  "somaticComponent": false,
                  "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
                  "sourceType": "Publication",
                  "verbalComponent": true,
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "spell",
              ],
            }
          }
        >
          <FormInput
            className={null}
            id="spell-casting-time-input"
            onChange={[Function]}
            placeholder=""
            type="text"
            validStatus={null}
            value="1 action"
          >
            <input
              className="form-control"
              id="spell-casting-time-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value="1 action"
            />
          </FormInput>
        </CastingTimeInput>
      </div>
    </FormGroup>
  </FormField>
</CastingTimeField>
`;

exports[`<SpellForm /> fields <DescriptionField /> should match the snapshot 1`] = `
<DescriptionField
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 action",
          "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
          "duration": "1 hour",
          "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
          "level": 0,
          "materialComponent": "a pinch of flumph dust",
          "name": "Flumph Lantern",
          "range": "30 feet",
          "ritual": false,
          "school": "evocation",
          "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
          "slug": "flumph-lantern",
          "somaticComponent": false,
          "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
          "sourceType": "Publication",
          "verbalComponent": true,
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
>
  <FormField
    className="spell-description-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "spell",
      ]
    }
    prop="description"
  >
    <FormGroup
      className="form-field spell-description-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field spell-description-field"
      >
        <label
          htmlFor="spell-description-input"
        >
          Description
        </label>
        <DescriptionInput
          form={
            Object {
              "data": Object {
                "spell": Object {
                  "castingTime": "1 action",
                  "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
                  "duration": "1 hour",
                  "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
                  "level": 0,
                  "materialComponent": "a pinch of flumph dust",
                  "name": "Flumph Lantern",
                  "range": "30 feet",
                  "ritual": false,
                  "school": "evocation",
                  "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
                  "slug": "flumph-lantern",
                  "somaticComponent": false,
                  "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
                  "sourceType": "Publication",
                  "verbalComponent": true,
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "spell",
              ],
            }
          }
        >
          <FormTextAreaInput
            className={null}
            id="spell-description-input"
            onChange={[Function]}
            rows={3}
            validStatus={null}
            value="You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. "
          >
            <textarea
              className="form-control"
              id="spell-description-input"
              onChange={[Function]}
              rows={3}
              value="You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. "
            />
          </FormTextAreaInput>
        </DescriptionInput>
      </div>
    </FormGroup>
  </FormField>
</DescriptionField>
`;

exports[`<SpellForm /> fields <DurationField /> should match the snapshot 1`] = `
<DurationField
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 action",
          "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
          "duration": "1 hour",
          "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
          "level": 0,
          "materialComponent": "a pinch of flumph dust",
          "name": "Flumph Lantern",
          "range": "30 feet",
          "ritual": false,
          "school": "evocation",
          "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
          "slug": "flumph-lantern",
          "somaticComponent": false,
          "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
          "sourceType": "Publication",
          "verbalComponent": true,
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
>
  <FormField
    className="spell-duration-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "spell",
      ]
    }
    prop="duration"
  >
    <FormGroup
      className="form-field spell-duration-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field spell-duration-field"
      >
        <label
          htmlFor="spell-duration-input"
        >
          Duration
        </label>
        <DurationInput
          form={
            Object {
              "data": Object {
                "spell": Object {
                  "castingTime": "1 action",
                  "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
                  "duration": "1 hour",
                  "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
                  "level": 0,
                  "materialComponent": "a pinch of flumph dust",
                  "name": "Flumph Lantern",
                  "range": "30 feet",
                  "ritual": false,
                  "school": "evocation",
                  "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
                  "slug": "flumph-lantern",
                  "somaticComponent": false,
                  "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
                  "sourceType": "Publication",
                  "verbalComponent": true,
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "spell",
              ],
            }
          }
        >
          <FormInput
            className={null}
            id="spell-duration-input"
            onChange={[Function]}
            placeholder=""
            type="text"
            validStatus={null}
            value="1 hour"
          >
            <input
              className="form-control"
              id="spell-duration-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value="1 hour"
            />
          </FormInput>
        </DurationInput>
      </div>
    </FormGroup>
  </FormField>
</DurationField>
`;

exports[`<SpellForm /> fields <LevelField /> should match the snapshot 1`] = `
<LevelField
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 action",
          "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
          "duration": "1 hour",
          "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
          "level": 0,
          "materialComponent": "a pinch of flumph dust",
          "name": "Flumph Lantern",
          "range": "30 feet",
          "ritual": false,
          "school": "evocation",
          "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
          "slug": "flumph-lantern",
          "somaticComponent": false,
          "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
          "sourceType": "Publication",
          "verbalComponent": true,
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
>
  <FormField
    className="spell-level-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "spell",
      ]
    }
    prop="level"
  >
    <FormGroup
      className="form-field spell-level-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field spell-level-field"
      >
        <label
          htmlFor="spell-level-input"
        >
          Level
        </label>
        <LevelInput
          form={
            Object {
              "data": Object {
                "spell": Object {
                  "castingTime": "1 action",
                  "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
                  "duration": "1 hour",
                  "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
                  "level": 0,
                  "materialComponent": "a pinch of flumph dust",
                  "name": "Flumph Lantern",
                  "range": "30 feet",
                  "ritual": false,
                  "school": "evocation",
                  "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
                  "slug": "flumph-lantern",
                  "somaticComponent": false,
                  "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
                  "sourceType": "Publication",
                  "verbalComponent": true,
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "spell",
              ],
            }
          }
        >
          <FormNumericInput
            id="spell-level-input"
            onChange={[Function]}
            type="number"
            value={0}
          >
            <FormInput
              className={null}
              id="spell-level-input"
              onChange={[Function]}
              placeholder=""
              type="number"
              validStatus={null}
              value="0"
            >
              <input
                className="form-control"
                id="spell-level-input"
                onChange={[Function]}
                placeholder=""
                type="number"
                value="0"
              />
            </FormInput>
          </FormNumericInput>
        </LevelInput>
      </div>
    </FormGroup>
  </FormField>
</LevelField>
`;

exports[`<SpellForm /> fields <NameField /> should match the snapshot 1`] = `
<NameField
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 action",
          "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
          "duration": "1 hour",
          "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
          "level": 0,
          "materialComponent": "a pinch of flumph dust",
          "name": "Flumph Lantern",
          "range": "30 feet",
          "ritual": false,
          "school": "evocation",
          "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
          "slug": "flumph-lantern",
          "somaticComponent": false,
          "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
          "sourceType": "Publication",
          "verbalComponent": true,
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
>
  <FormField
    className="spell-name-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "spell",
      ]
    }
    prop="name"
  >
    <FormGroup
      className="form-field spell-name-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field spell-name-field"
      >
        <label
          htmlFor="spell-name-input"
        >
          Name
        </label>
        <NameInput
          form={
            Object {
              "data": Object {
                "spell": Object {
                  "castingTime": "1 action",
                  "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
                  "duration": "1 hour",
                  "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
                  "level": 0,
                  "materialComponent": "a pinch of flumph dust",
                  "name": "Flumph Lantern",
                  "range": "30 feet",
                  "ritual": false,
                  "school": "evocation",
                  "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
                  "slug": "flumph-lantern",
                  "somaticComponent": false,
                  "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
                  "sourceType": "Publication",
                  "verbalComponent": true,
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "spell",
              ],
            }
          }
        >
          <FormInput
            className={null}
            id="spell-name-input"
            onChange={[Function]}
            placeholder=""
            type="text"
            validStatus={null}
            value="Flumph Lantern"
          >
            <input
              className="form-control"
              id="spell-name-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value="Flumph Lantern"
            />
          </FormInput>
        </NameInput>
      </div>
    </FormGroup>
  </FormField>
</NameField>
`;

exports[`<SpellForm /> fields <RangeField /> should match the snapshot 1`] = `
<RangeField
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 action",
          "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
          "duration": "1 hour",
          "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
          "level": 0,
          "materialComponent": "a pinch of flumph dust",
          "name": "Flumph Lantern",
          "range": "30 feet",
          "ritual": false,
          "school": "evocation",
          "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
          "slug": "flumph-lantern",
          "somaticComponent": false,
          "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
          "sourceType": "Publication",
          "verbalComponent": true,
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
>
  <FormField
    className="spell-range-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "spell",
      ]
    }
    prop="range"
  >
    <FormGroup
      className="form-field spell-range-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field spell-range-field"
      >
        <label
          htmlFor="spell-range-input"
        >
          Range
        </label>
        <RangeInput
          form={
            Object {
              "data": Object {
                "spell": Object {
                  "castingTime": "1 action",
                  "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
                  "duration": "1 hour",
                  "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
                  "level": 0,
                  "materialComponent": "a pinch of flumph dust",
                  "name": "Flumph Lantern",
                  "range": "30 feet",
                  "ritual": false,
                  "school": "evocation",
                  "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
                  "slug": "flumph-lantern",
                  "somaticComponent": false,
                  "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
                  "sourceType": "Publication",
                  "verbalComponent": true,
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "spell",
              ],
            }
          }
        >
          <FormInput
            className={null}
            id="spell-range-input"
            onChange={[Function]}
            placeholder=""
            type="text"
            validStatus={null}
            value="30 feet"
          >
            <input
              className="form-control"
              id="spell-range-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value="30 feet"
            />
          </FormInput>
        </RangeInput>
      </div>
    </FormGroup>
  </FormField>
</RangeField>
`;

exports[`<SpellForm /> fields <RitualField /> should match the snapshot 1`] = `
<RitualField
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 action",
          "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
          "duration": "1 hour",
          "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
          "level": 0,
          "materialComponent": "a pinch of flumph dust",
          "name": "Flumph Lantern",
          "range": "30 feet",
          "ritual": false,
          "school": "evocation",
          "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
          "slug": "flumph-lantern",
          "somaticComponent": false,
          "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
          "sourceType": "Publication",
          "verbalComponent": true,
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
>
  <FormField
    className="spell-ritual-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "spell",
      ]
    }
    prop="ritual"
  >
    <FormGroup
      className="form-field spell-ritual-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field spell-ritual-field"
      >
        <label
          htmlFor="spell-ritual-input"
        >
          Ritual
        </label>
        <RitualInput
          form={
            Object {
              "data": Object {
                "spell": Object {
                  "castingTime": "1 action",
                  "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
                  "duration": "1 hour",
                  "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
                  "level": 0,
                  "materialComponent": "a pinch of flumph dust",
                  "name": "Flumph Lantern",
                  "range": "30 feet",
                  "ritual": false,
                  "school": "evocation",
                  "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
                  "slug": "flumph-lantern",
                  "somaticComponent": false,
                  "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
                  "sourceType": "Publication",
                  "verbalComponent": true,
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "spell",
              ],
            }
          }
        >
          <FormCheckboxInput
            className={null}
            id="spell-ritual-input"
            label={null}
            onChange={[Function]}
            validStatus={null}
            value={false}
          >
            <div
              className="custom-control custom-checkbox"
            >
              <input
                checked={false}
                className="custom-control-input"
                id="spell-ritual-input"
                onChange={[Function]}
                type="checkbox"
              />
              <label
                className="custom-control-label"
                htmlFor="spell-ritual-input"
              />
            </div>
          </FormCheckboxInput>
        </RitualInput>
      </div>
    </FormGroup>
  </FormField>
</RitualField>
`;

exports[`<SpellForm /> fields <SchoolField /> should match the snapshot 1`] = `
<SchoolField
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 action",
          "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
          "duration": "1 hour",
          "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
          "level": 0,
          "materialComponent": "a pinch of flumph dust",
          "name": "Flumph Lantern",
          "range": "30 feet",
          "ritual": false,
          "school": "evocation",
          "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
          "slug": "flumph-lantern",
          "somaticComponent": false,
          "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
          "sourceType": "Publication",
          "verbalComponent": true,
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
  options={
    Array [
      Object {
        "label": "Abjuration",
        "value": "abjuration",
      },
      Object {
        "label": "Conjuration",
        "value": "conjuration",
      },
      Object {
        "label": "Divination",
        "value": "divination",
      },
      Object {
        "label": "Enchantment",
        "value": "enchantment",
      },
      Object {
        "label": "Evocation",
        "value": "evocation",
      },
      Object {
        "label": "Illusion",
        "value": "illusion",
      },
      Object {
        "label": "Necromancy",
        "value": "necromancy",
      },
      Object {
        "label": "Transmutation",
        "value": "transmutation",
      },
    ]
  }
>
  <FormField
    className="spell-school-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "spell",
      ]
    }
    prop="school"
  >
    <FormGroup
      className="form-field spell-school-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field spell-school-field"
      >
        <label
          htmlFor="spell-school-input"
        >
          School
        </label>
        <SchoolInput
          form={
            Object {
              "data": Object {
                "spell": Object {
                  "castingTime": "1 action",
                  "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
                  "duration": "1 hour",
                  "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
                  "level": 0,
                  "materialComponent": "a pinch of flumph dust",
                  "name": "Flumph Lantern",
                  "range": "30 feet",
                  "ritual": false,
                  "school": "evocation",
                  "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
                  "slug": "flumph-lantern",
                  "somaticComponent": false,
                  "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
                  "sourceType": "Publication",
                  "verbalComponent": true,
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "spell",
              ],
            }
          }
          options={
            Array [
              Object {
                "label": "Abjuration",
                "value": "abjuration",
              },
              Object {
                "label": "Conjuration",
                "value": "conjuration",
              },
              Object {
                "label": "Divination",
                "value": "divination",
              },
              Object {
                "label": "Enchantment",
                "value": "enchantment",
              },
              Object {
                "label": "Evocation",
                "value": "evocation",
              },
              Object {
                "label": "Illusion",
                "value": "illusion",
              },
              Object {
                "label": "Necromancy",
                "value": "necromancy",
              },
              Object {
                "label": "Transmutation",
                "value": "transmutation",
              },
            ]
          }
        >
          <FormSelectInput
            className={null}
            defaultOption={null}
            id="spell-school-input"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "label": "Abjuration",
                  "value": "abjuration",
                },
                Object {
                  "label": "Conjuration",
                  "value": "conjuration",
                },
                Object {
                  "label": "Divination",
                  "value": "divination",
                },
                Object {
                  "label": "Enchantment",
                  "value": "enchantment",
                },
                Object {
                  "label": "Evocation",
                  "value": "evocation",
                },
                Object {
                  "label": "Illusion",
                  "value": "illusion",
                },
                Object {
                  "label": "Necromancy",
                  "value": "necromancy",
                },
                Object {
                  "label": "Transmutation",
                  "value": "transmutation",
                },
              ]
            }
            validStatus={null}
            value="evocation"
          >
            <select
              className="custom-select"
              id="spell-school-input"
              onChange={[Function]}
              value="evocation"
            >
              <FormSelectOption
                key="option-0"
                label="Abjuration"
                value="abjuration"
              >
                <option
                  value="abjuration"
                >
                  Abjuration
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="option-1"
                label="Conjuration"
                value="conjuration"
              >
                <option
                  value="conjuration"
                >
                  Conjuration
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="option-2"
                label="Divination"
                value="divination"
              >
                <option
                  value="divination"
                >
                  Divination
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="option-3"
                label="Enchantment"
                value="enchantment"
              >
                <option
                  value="enchantment"
                >
                  Enchantment
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="option-4"
                label="Evocation"
                value="evocation"
              >
                <option
                  value="evocation"
                >
                  Evocation
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="option-5"
                label="Illusion"
                value="illusion"
              >
                <option
                  value="illusion"
                >
                  Illusion
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="option-6"
                label="Necromancy"
                value="necromancy"
              >
                <option
                  value="necromancy"
                >
                  Necromancy
                </option>
              </FormSelectOption>
              <FormSelectOption
                key="option-7"
                label="Transmutation"
                value="transmutation"
              >
                <option
                  value="transmutation"
                >
                  Transmutation
                </option>
              </FormSelectOption>
            </select>
          </FormSelectInput>
        </SchoolInput>
      </div>
    </FormGroup>
  </FormField>
</SchoolField>
`;

exports[`<SpellForm /> fields <ShortDescriptionField /> should match the snapshot 1`] = `
<ShortDescriptionField
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 action",
          "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
          "duration": "1 hour",
          "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
          "level": 0,
          "materialComponent": "a pinch of flumph dust",
          "name": "Flumph Lantern",
          "range": "30 feet",
          "ritual": false,
          "school": "evocation",
          "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
          "slug": "flumph-lantern",
          "somaticComponent": false,
          "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
          "sourceType": "Publication",
          "verbalComponent": true,
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
>
  <FormField
    className="spell-short-description-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "spell",
      ]
    }
    prop="shortDescription"
  >
    <FormGroup
      className="form-field spell-short-description-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field spell-short-description-field"
      >
        <label
          htmlFor="spell-short-description-input"
        >
          Short Description
        </label>
        <ShortDescriptionInput
          form={
            Object {
              "data": Object {
                "spell": Object {
                  "castingTime": "1 action",
                  "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
                  "duration": "1 hour",
                  "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
                  "level": 0,
                  "materialComponent": "a pinch of flumph dust",
                  "name": "Flumph Lantern",
                  "range": "30 feet",
                  "ritual": false,
                  "school": "evocation",
                  "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
                  "slug": "flumph-lantern",
                  "somaticComponent": false,
                  "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
                  "sourceType": "Publication",
                  "verbalComponent": true,
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "spell",
              ],
            }
          }
        >
          <FormInput
            className={null}
            id="spell-short-description-input"
            onChange={[Function]}
            placeholder=""
            type="text"
            validStatus={null}
            value="Floating light illuminates 20 feet + 20 feet dim light"
          >
            <input
              className="form-control"
              id="spell-short-description-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value="Floating light illuminates 20 feet + 20 feet dim light"
            />
          </FormInput>
        </ShortDescriptionInput>
      </div>
    </FormGroup>
  </FormField>
</ShortDescriptionField>
`;

exports[`<SpellForm /> fields <SlugField /> should match the snapshot 1`] = `
<SlugField
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 action",
          "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
          "duration": "1 hour",
          "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
          "level": 0,
          "materialComponent": "a pinch of flumph dust",
          "name": "Flumph Lantern",
          "range": "30 feet",
          "ritual": false,
          "school": "evocation",
          "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
          "slug": "flumph-lantern",
          "somaticComponent": false,
          "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
          "sourceType": "Publication",
          "verbalComponent": true,
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
>
  <FormField
    className="spell-slug-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "spell",
      ]
    }
    prop="slug"
  >
    <FormGroup
      className="form-field spell-slug-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field spell-slug-field"
      >
        <label
          htmlFor="spell-slug-input"
        >
          Slug
        </label>
        <SlugInput
          form={
            Object {
              "data": Object {
                "spell": Object {
                  "castingTime": "1 action",
                  "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
                  "duration": "1 hour",
                  "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
                  "level": 0,
                  "materialComponent": "a pinch of flumph dust",
                  "name": "Flumph Lantern",
                  "range": "30 feet",
                  "ritual": false,
                  "school": "evocation",
                  "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
                  "slug": "flumph-lantern",
                  "somaticComponent": false,
                  "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
                  "sourceType": "Publication",
                  "verbalComponent": true,
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "spell",
              ],
            }
          }
        >
          <FormInput
            className={null}
            id="spell-slug-input"
            onChange={[Function]}
            placeholder=""
            type="text"
            validStatus={null}
            value="flumph-lantern"
          >
            <input
              className="form-control"
              id="spell-slug-input"
              onChange={[Function]}
              placeholder=""
              type="text"
              value="flumph-lantern"
            />
          </FormInput>
        </SlugInput>
      </div>
    </FormGroup>
  </FormField>
</SlugField>
`;

exports[`<SpellForm /> fields <SourceField /> should match the snapshot 1`] = `
<SourceField
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 action",
          "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
          "duration": "1 hour",
          "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
          "level": 0,
          "materialComponent": "a pinch of flumph dust",
          "name": "Flumph Lantern",
          "range": "30 feet",
          "ritual": false,
          "school": "evocation",
          "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
          "slug": "flumph-lantern",
          "somaticComponent": false,
          "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
          "sourceType": "Publication",
          "verbalComponent": true,
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
>
  <FormField
    className="spell-source-field"
    colWidth={null}
    inputId={null}
    label={null}
    path={
      Array [
        "spell",
      ]
    }
    prop="source"
  >
    <FormGroup
      className="form-field spell-source-field"
      colWidth={null}
    >
      <div
        className="form-group col form-field spell-source-field"
      >
        <label
          htmlFor="spell-source-input"
        >
          Source
        </label>
        <SourceInput
          form={
            Object {
              "data": Object {
                "spell": Object {
                  "castingTime": "1 action",
                  "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
                  "duration": "1 hour",
                  "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
                  "level": 0,
                  "materialComponent": "a pinch of flumph dust",
                  "name": "Flumph Lantern",
                  "range": "30 feet",
                  "ritual": false,
                  "school": "evocation",
                  "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
                  "slug": "flumph-lantern",
                  "somaticComponent": false,
                  "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
                  "sourceType": "Publication",
                  "verbalComponent": true,
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "spell",
              ],
            }
          }
        >
          <SelectSpellSourceInput
            id="spell-source-input"
            onChange={[Function]}
            value="Publication da08708e-0505-4819-bc69-00b6589a4e4f"
          >
            <FormSelectInput
              className={null}
              defaultOption="Homebrew"
              id="spell-source-input"
              onChange={[Function]}
              options={Array []}
              validStatus={null}
              value="Publication da08708e-0505-4819-bc69-00b6589a4e4f"
            >
              <select
                className="custom-select"
                id="spell-source-input"
                onChange={[Function]}
                value="Publication da08708e-0505-4819-bc69-00b6589a4e4f"
              >
                <FormSelectOption
                  key="option-0"
                  label="Homebrew"
                  value=""
                >
                  <option
                    value=""
                  >
                    Homebrew
                  </option>
                </FormSelectOption>
              </select>
            </FormSelectInput>
          </SelectSpellSourceInput>
        </SourceInput>
      </div>
    </FormGroup>
  </FormField>
</SourceField>
`;

exports[`<SpellForm /> fields <SubmitButton /> should match the snapshot 1`] = `
<SubmitButton
  disabled={false}
  form={
    Object {
      "data": Object {
        "spell": Object {
          "castingTime": "1 action",
          "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
          "duration": "1 hour",
          "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
          "level": 0,
          "materialComponent": "a pinch of flumph dust",
          "name": "Flumph Lantern",
          "range": "30 feet",
          "ritual": false,
          "school": "evocation",
          "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
          "slug": "flumph-lantern",
          "somaticComponent": false,
          "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
          "sourceType": "Publication",
          "verbalComponent": true,
        },
      },
      "onChangeAction": [MockFunction],
      "onSubmitAction": [MockFunction],
      "path": Array [
        "spell",
      ],
    }
  }
  status="initialized"
>
  <FormGroup
    className=""
    colWidth={null}
  >
    <div
      className="form-group col"
    >
      <SpellFormSubmitButton
        disabled={false}
        form={
          Object {
            "data": Object {
              "spell": Object {
                "castingTime": "1 action",
                "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
                "duration": "1 hour",
                "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
                "level": 0,
                "materialComponent": "a pinch of flumph dust",
                "name": "Flumph Lantern",
                "range": "30 feet",
                "ritual": false,
                "school": "evocation",
                "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
                "slug": "flumph-lantern",
                "somaticComponent": false,
                "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
                "sourceType": "Publication",
                "verbalComponent": true,
              },
            },
            "onChangeAction": [MockFunction],
            "onSubmitAction": [MockFunction],
            "path": Array [
              "spell",
            ],
          }
        }
        isUpdate={false}
        status="initialized"
      >
        <FormSubmitWrapper
          block={true}
          disabled={false}
          form={
            Object {
              "data": Object {
                "spell": Object {
                  "castingTime": "1 action",
                  "description": "You conjure a glowing, spectral orb the size of a closed fist and bearing the likeness of everyone's favorite creature, the Flumph. Until the spell ends, the orb sheds bright light in a 20-foot radius and dim light for an additional 20 feet. The light can be colored as you like. The spell ends if you cast it again or dismiss it as an action.

You can move the orb to anywhere within 30 feet of you as a bonus action. If you move more than 30 feet away from the orb, it will float directly to your location at the beginning of your next turn; if it is unable to reach your location, the spell immediately ends. ",
                  "duration": "1 hour",
                  "id": "823dbe98-ef01-4984-b8b2-34c2946091ce",
                  "level": 0,
                  "materialComponent": "a pinch of flumph dust",
                  "name": "Flumph Lantern",
                  "range": "30 feet",
                  "ritual": false,
                  "school": "evocation",
                  "shortDescription": "Floating light illuminates 20 feet + 20 feet dim light",
                  "slug": "flumph-lantern",
                  "somaticComponent": false,
                  "sourceId": "da08708e-0505-4819-bc69-00b6589a4e4f",
                  "sourceType": "Publication",
                  "verbalComponent": true,
                },
              },
              "onChangeAction": [MockFunction],
              "onSubmitAction": [MockFunction],
              "path": Array [
                "spell",
              ],
            }
          }
          outline={true}
        >
          <Button
            block={true}
            buttonSize="md"
            buttonStyle="primary"
            className={null}
            disabled={false}
            link={false}
            onClick={[Function]}
            outline={true}
          >
            <button
              className="btn btn-outline-primary btn-block"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Create Spell
            </button>
          </Button>
        </FormSubmitWrapper>
      </SpellFormSubmitButton>
    </div>
  </FormGroup>
</SubmitButton>
`;
